# flash-attention

./: .gitignore  .gitmodules  flash_attn.h  setup.py  yes.py
csrc/: CMakeLists.txt  flash_attn.cu  mp.py  setup.py  tp.py  yest
csrc/capi/: flash_attn.cu  flash_attn.h
csrc/flash_attn/: CMakeLists.txt  flash_attn.cpp  flash_attn.cu  flash_attn.h  flash_attn_with_bias_mask.cpp
csrc/flash_attn/src/: cuda_utils.cu  cuda_utils.h  flash.h  flash_bwd_hdim128_bf16_causal_flashmask_sm80.cu  flash_bwd_hdim128_bf16_causal_sm80.cu  flash_bwd_hdim128_bf16_densemask_sm80.cu  flash_bwd_hdim128_bf16_flashmask_sm80.cu  flash_bwd_hdim128_bf16_sm80.cu  flash_bwd_hdim128_fp16_causal_flashmask_sm80.cu  flash_bwd_hdim128_fp16_causal_sm80.cu  flash_bwd_hdim128_fp16_densemask_sm80.cu  flash_bwd_hdim128_fp16_flashmask_sm80.cu  flash_bwd_hdim128_fp16_sm80.cu  flash_bwd_hdim160_bf16_causal_flashmask_sm80.cu  flash_bwd_hdim160_bf16_causal_sm80.cu  flash_bwd_hdim160_bf16_densemask_sm80.cu  flash_bwd_hdim160_bf16_flashmask_sm80.cu  flash_bwd_hdim160_bf16_sm80.cu  flash_bwd_hdim160_fp16_causal_flashmask_sm80.cu  flash_bwd_hdim160_fp16_causal_sm80.cu  flash_bwd_hdim160_fp16_densemask_sm80.cu  flash_bwd_hdim160_fp16_flashmask_sm80.cu  flash_bwd_hdim160_fp16_sm80.cu  flash_bwd_hdim192_bf16_causal_flashmask_sm80.cu  flash_bwd_hdim192_bf16_causal_sm80.cu  flash_bwd_hdim192_bf16_densemask_sm80.cu  flash_bwd_hdim192_bf16_flashmask_sm80.cu  flash_bwd_hdim192_bf16_sm80.cu  flash_bwd_hdim192_fp16_causal_flashmask_sm80.cu  flash_bwd_hdim192_fp16_causal_sm80.cu  flash_bwd_hdim192_fp16_densemask_sm80.cu  flash_bwd_hdim192_fp16_flashmask_sm80.cu  flash_bwd_hdim192_fp16_sm80.cu  flash_bwd_hdim224_bf16_causal_flashmask_sm80.cu  flash_bwd_hdim224_bf16_causal_sm80.cu  flash_bwd_hdim224_bf16_densemask_sm80.cu  flash_bwd_hdim224_bf16_flashmask_sm80.cu  flash_bwd_hdim224_bf16_sm80.cu  flash_bwd_hdim224_fp16_causal_flashmask_sm80.cu  flash_bwd_hdim224_fp16_causal_sm80.cu  (+154 more)
csrc/flash_attn/src/fmha/: gmem_tile.h  utils.h
csrc/flash_attn/src/reduce_config/: reduce_hdim128_bf16_sm80.cu  reduce_hdim128_fp16_sm80.cu  reduce_hdim160_bf16_sm80.cu  reduce_hdim160_fp16_sm80.cu  reduce_hdim192_bf16_sm80.cu  reduce_hdim192_fp16_sm80.cu  reduce_hdim224_bf16_sm80.cu  reduce_hdim224_fp16_sm80.cu  reduce_hdim256_bf16_sm80.cu  reduce_hdim256_fp16_sm80.cu  reduce_hdim32_bf16_sm80.cu  reduce_hdim32_fp16_sm80.cu  reduce_hdim64_bf16_sm80.cu  reduce_hdim64_fp16_sm80.cu  reduce_hdim96_bf16_sm80.cu  reduce_hdim96_fp16_sm80.cu  reduce_launch_template.h
csrc/flash_attn_v3/: epilogue_bwd.hpp  epilogue_fwd.hpp  flash_api.cu  flash_api.h  flash_bwd_launch_template.h  flash_bwd_postprocess_kernel.h  flash_bwd_preprocess_kernel.h  flashmask_config.py  mainloop_bwd_sm90_tma_gmma_ws.hpp  setup.py  sm90_pipeline_no_cluster.hpp
csrc/flash_attn_with_bias_and_mask/: CMakeLists.txt
csrc/flash_attn_with_bias_and_mask/src/fmha/: smem_tile.h
csrc/flashmask_v2/: flash.h  flash_api.cpp  flash_api.cu  flash_api.h  flash_api_cuda.cu  flash_api_torch.cpp  flash_bwd_kernel_sm90.h  flash_bwd_launch_template.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_mask.hpp  flash_mask_interface.py  flash_prepare_scheduler.cu  flashmask_config.py  flashmask_interface.py  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  named_barrier.hpp  setup.py  static_switch.h  test_mask.py  tile_scheduler.hpp  tile_size.h
csrc/flashmask_v2/distributed/: CMakeLists.txt  ag_semaphore_ops.cuh  cp_heuristic.cuh  debug_logger.cuh  dk_dv_reduce_bf16.cuh  fast_divmod.cuh  nvshmem_copy_utils.cuh  nvshmem_handle.h  overlap_comm.cu  overlap_comm.cuh  remote_get_kernel.cuh  remote_get_kernel_specialized.cuh  remote_put_kernel.cuh  rs_semaphore_ops.cuh  semaphore_ops.cuh  sep_sr_buffer.cu  sep_sr_buffer.cuh  sr_buffer.cuh
csrc/flashmask_v2/distributed/cmake/: nvshmem.cmake  nvshmem_plugin_isolation.patch
csrc/utils/cp_balance/cp_balance/: context_parallel_utils.py  cp_balance.py  cp_balance_cuda_kernels.py
csrc/utils/cp_balance/csrc/: cp_balance_utils.cu  (+1 more)
flashmask/flash_mask/: CMakeLists.txt  __init__.py  interface.py
flashmask/flash_mask/cp_balance/: __init__.py  cp_balance.py  cp_balance_cuda_kernels.py
flashmask/flash_mask/cute/: AUTHORS  __init__.py  block_info.py  block_sparse_utils.py  block_sparsity.py  compute_block_sparsity.py  cute_dsl_utils.py  flash_bwd.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_bwd_sm100.py  flash_bwd_sm90.py  flash_fwd.py  flash_fwd_combine.py  flash_fwd_sm100.py  flash_fwd_sm90.py  flashmask_utils.py  interface.py  mask.py  pack_gqa.py  paged_kv.py  softmax.py  tile_scheduler.py
flashmask/flash_mask/flash_attn_v4/: block_info.py  copy_utils.py  flash_bwd_postprocess.py  flash_bwd_preprocess.py  flash_bwd_sm100.py  flash_fwd_sm100.py  mask.py  sm100_hd256_2cta_fmha_backward.py  sm100_hd256_2cta_fmha_backward_dkdvkernel.py  sm100_hd256_2cta_fmha_backward_dqkernel.py  sm100_hd256_2cta_fmha_forward.py  softmax.py  utils.py
flashmask/flash_mask/flashmask_attention_v3/: __init__.py  block.h  copy_sm90_bulk_reduce.hpp  cuda_check.h  epilogue_bwd.hpp  epilogue_fwd.hpp  flash.h  flash_api.cu  flash_api.h  flash_api_torch.cpp  flash_bwd_kernel_sm80.h  flash_bwd_kernel_sm90.h  flash_bwd_launch_template.h  flash_bwd_postprocess_kernel.h  flash_bwd_preprocess_kernel.h  flash_fwd_combine.cu  flash_fwd_combine_kernel.h  flash_fwd_combine_launch_template.h  flash_fwd_kernel_sm80.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  flash_mask.hpp  flash_prepare_scheduler.cu  flashmask_interface.py  generate_kernels.py  heuristics.h  interface.py  mainloop_bwd_sm80.hpp  mainloop_bwd_sm90_tma_gmma_ws.hpp  mainloop_fwd_sm80.hpp  mainloop_fwd_sm90_tma_gmma_ws.hpp  mask.h  named_barrier.hpp  pack_gqa.h  paged_kv.h  print_val.cu  rotary.h  seqlen.h  setup_torch.py  sm90_pipeline_no_cluster.hpp  (+5 more)
flashmask/flash_mask/linear_attn/: triton_utils.py
flashmask/flash_mask/test/: test.py
flashmask/flash_mask/utils/: __init__.py  block_mask_utils.py  index_utils.py  rr_attn_estimate_triton_op.py  rr_attn_interface.py
(+38 files in other folders)
